# digital-beer-menu

./: .flake8  .flaskenv.example  .gitignore  README.md  app.yaml  appengine_config.py  dbshell.py  env_production.yaml.example  pyproject.toml  requirements.txt  run.py
application/: __init__.py  beermenu.py  bottlemenu.py  config.py  content_admin.py  generate_keys.py  models.py  urls.py  users.py  util.py  views.py
application/flask_admin_patch/: view.py
application/static/css/: bootstrap-2.2.1-cyborg.min.css  main.css
application/static/js/: beermenu-admin-jqgrid.js  bottlemenu-admin-jqgrid.js  jquery.dynamicfontsize.min.js  main.js
application/templates/: admin.html  auditlog.html  base.html  bottleadmin.html  bottlemenu.html  content_edit.html  error.html  faq.html  home-nofun.html  linestatus.html  menu.html  warmup.html
application/templates/includes/: carousel-nofun.html  nav.html
lib/flask_admin_patch/: fields.py  view.py
lib/wtforms_appengine/: db.py  fields.py  ndb.py
src/: app.yaml  index.yaml  run.py
src/application/: __init__.py  content_admin.py  decorators.py  models.py  settings.py  urls.py  util.py  views.py
src/application/static/css/: bootstrap-2.2.1-cyborg.min.css  main.css
src/application/static/js/: beermenu-admin-jqgrid.js  bottlemenu-admin-jqgrid.js
src/application/templates/: admin.html  auditlog.html  barmenu.html  base.html  bottleadmin.html  content_create.html  error.html  faq.html  home-nofun.html  home.html  linestatus.html  menu.html
src/application/templates/includes/: carousel-nofun.html  carousel.html  nav.html
